add locale routes support

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,7 @@ en:
   name: Code Skull
   about: About
   contribute: Contribute
-  slogan: Lean how to code!
+  slogan: Teach and learn how to code!
   register_courses: Register courses
   learn_for_free: Learn for free
   already_registered: Already Registered?
