--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,7 +2,7 @@ pt-BR:
   name: Code Skull
   about: Sobre
   contribute: Contribua
-  slogan: Aprenda a programar!
+  slogan: Ensine e aprenda a programar!
   register_courses: Cadastre cursos
   learn_for_free: Aprenda gratuitamente
   already_registered: Já é cadastrado?
