add dashboard view

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -11,6 +11,7 @@ pt-BR:
   login: Entrar
   logout: Sair 
   social_networks: Redes sociais
+  login_with: "Entrar com %{social_netowork}"
   activerecord:
     errors:
       messages:
